<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage"
            android:icon="@mipmap/ic_support"
            android:width="24dp"
            android:height="24dp"
            android:title="@string/titulo_menu_preferencia" />
    </group>

    <item android:title="@string/titulo_menu_comunicacao">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/ic_share"
                android:width="24dp"
                android:height="24dp"
                android:title="@string/titulo_menu_compartilhe" />
            <item
                android:id="@+id/nav_send"
                android:icon="@mipmap/ic_comments"
                android:width="24dp"
                android:height="24dp"
                android:title="@string/titulo_menu_opine" />
        </menu>
    </item>

</menu>
