<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/ll_numero_casas_decimais">

                <TextView style="@style/itemTitle"
                    android:id="@+id/tv_numero_casas_decimais"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_numero_casas_decimais"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    />

                <TextView style="@style/itemSubTitle"
                    android:id="@+id/tv_observacao_casas_decimais"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/observacao_casas_decimais"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView style="@style/itemTitle"
                    android:id="@+id/tv_notacao_cientifica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notacao_cientifica"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    />

                <Switch style="@style/itemSubTitle"
                    android:id="@+id/sw_status_notacao_cientifica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_notacao_cientifica"
                    android:paddingTop="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="@dimen/list_item_tv_paddingBottom"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_sobre"
                android:orientation="vertical" >

                <TextView style="@style/itemTitle"
                    android:id="@+id/tv_sobre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_about"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical"
                        android:background="@mipmap/ic_reading"
                        tools:ignore="ContentDescription" />

                    <TextView
                        style="@style/itemSubTitle"
                        android:id="@+id/tv_informacoes_gerais"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/informacoes_gerais"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_contato"
                android:orientation="vertical" >

                <TextView style="@style/itemTitle"
                    android:id="@+id/tv_contato"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_contato"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical"
                        android:background="@mipmap/ic_online_support"
                        tools:ignore="ContentDescription" />

                    <TextView style="@style/itemSubTitle"
                        android:id="@+id/tv_observacao_contato"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/action_obs_contato"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
