<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_descricao_app"
                android:orientation="vertical" >

                <TextView style="@style/itemTitle"
                    android:id="@+id/tv_tit_descricao_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_descricao_app"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical"
                        android:background="@mipmap/ic_innovation"
                        tools:ignore="ContentDescription" />

                    <TextView style="@style/itemSubTitle"
                        android:id="@+id/tv_descricao_app"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/descricao_app"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        tools:ignore="RtlSymmetry"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"  >

                <TextView style="@style/itemTitle"
                    android:id="@+id/tv_tit_versao_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_versao_app"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical"
                        android:background="@mipmap/ic_transaction_list"
                        tools:ignore="ContentDescription" />

                    <TextView style="@style/itemSubTitle"
                        android:id="@+id/tv_numero_versao_app"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:id="@+id/ll_desenvolvedor_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView style="@style/itemTitle"
                    android:id="@+id/tv_tit_desenvolvedor_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_desenvolvedor_app"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical"
                        android:background="@mipmap/ic_permanent_job"
                        tools:ignore="ContentDescription" />

                    <TextView style="@style/itemSubTitle"
                        android:id="@+id/tv_nome_desenvolvedor_app"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nome_desenvolvedor_app"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_contato"
                android:orientation="vertical" >

                <TextView style="@style/itemTitle"
                    android:id="@+id/tv_tit_site_desenvolvedor_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_contato_desenvolvedor_app"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical"
                        android:background="@mipmap/ic_electronic_identity_card"
                        tools:ignore="ContentDescription" />

                    <TextView style="@style/itemSubTitle"
                        android:id="@+id/tv_site_desenvolvedor_app"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/destinatario_feedback"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_observacao"
                android:orientation="vertical" >

                <TextView style="@style/itemTitle"
                    android:id="@+id/tv_tit_observacao_sobre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_observacao_sobre"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical"
                        android:background="@mipmap/ic_star_filled"
                        tools:ignore="ContentDescription" />

                    <TextView style="@style/itemSubTitle"
                        android:id="@+id/tv_observacao_sobre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/observacao_sobre"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
